# micro-manager

./: .gitignore  micromanager.sln
DeviceAdapters/: Makefile.am  configure.ac
DeviceAdapters/CoherentChameleon/: CoherentChameleon.cpp  CoherentChameleon.h  CoherentChameleon.vcxproj  CoherentChameleon.vcxproj.filters  DeviceUtil.h  Util.cpp  Util.h  commands.h  error_code.cpp  error_code.h  fault_codes.cpp  fault_codes.h  module.cpp
DeviceAdapters/DecouplingStage/: DecouplingController.cpp  DecouplingController.h  DecouplingStage.cpp  DecouplingStage.h  DecouplingStage.vcxproj  DecouplingStage.vcxproj.filters  DeviceUtil.h  Makefile.am  Util.h  errorCode.cpp  errorCode.h  module.cpp
DeviceAdapters/FakeCamera/: CoherentChameleon.h  FakeCamera.cpp  FakeCamera.h  FakeCamera.vcxproj  FakeCamera.vcxproj.filters  error_code.cpp  module.cpp
DeviceAdapters/PM100USB/: Makefile.am  PM100USB.cpp  PM100USB.filters  PM100USB.h  PM100USB.vcxproj  PM100USB.vcxproj.filters  module.cpp
DeviceAdapters/SimulatingCamera/: Makefile.am  SimulatingCamera.cpp  SimulatingCamera.h  SimulatingCamera.vcxproj
MMDevice/: MMDevice-StaticRuntime.vcxproj
