
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_DecouplingStage.la
libmmgr_dal_DecouplingStage_la_SOURCES = DecouplingStage.h DecouplingStage.cpp DeviceUtil.h error_code.cpp error_code.h module.cpp Util.cpp Util.h
libmmgr_dal_DecouplingStage_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_DecouplingStage_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)
