
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS) $(BOOST_CPPFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_SimulatingCamera.la
libmmgr_dal_SimulatingCamera_la_SOURCES = SimulatingCamera.cpp SimulatingCamera.h ../../MMDevice/MMDevice.h
libmmgr_dal_SimulatingCamera_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)
libmmgr_dal_SimulatingCamera_la_LIBADD = $(MMDEVAPI_LIBADD)

EXTRA_DIST = SimulatingCamera.vcproj
